RESOLVED FIXED 245148
[GStreamer] Fix media player's duration calculation
https://bugs.webkit.org/show_bug.cgi?id=245148
Summary [GStreamer] Fix media player's duration calculation
Enrique Ocaña
Reported 2022-09-13 10:18:58 PDT
Videos without an initially known duration, such as https://traffic.megaphone.fm/GLT1153394917.mp3?updated=1617734730, are currently detected as infinite videos (live streams). They should be detected as fixed-length videos instead of as a live broadcast.
Attachments
Enrique Ocaña
Comment 1 2022-09-13 10:27:13 PDT
EWS
Comment 2 2022-09-20 10:24:05 PDT
Committed 254682@main (0d46fa12c99c): <https://commits.webkit.org/254682@main> Reviewed commits have been landed. Closing PR #4320 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-09-20 10:25:42 PDT
Note You need to log in before you can comment on or make changes to this bug.